# MIO-KITCHEN-SOURCE

./: .gitignore  AI_engine.py  Document_Library.py  LICENSE  Magisk.py  README.md  README_de-DE.md  README_ja-JP.md  README_pt-BR.md  README_ru-RU.md  README_vi-VN.md  README_zh-CN.md  TkinterDnD.py  add_language.py  blockimgdiff.py  build.py  by.bat  common.py  config  config.py  config_parser.py  contextpatch.py  controls.py  dumper.py  dz.py  editor.py  ext4.py  extra.py  fspatch.py  gpt.py  images.py  img2sdat.py  imgextractor.py  imp.py  kdz.py  load_window.py  lpunpack.py  mergerboot.py  mergersystem.py  mkc_filedialog.py  (+43 more)
.github/: FUNDING.yml
.github/aarch64/: build.sh  build_inside.sh  clean.sh  umount.sh
.github/workflows/: main.yml
myenv/: pyvenv.cfg
pyaxmlparser/: arscparser.py  arscutil.py  axmlprinter.py  core.py
readmes/: README_id-ID.md  README_ja-JP.md  README_pt-BR.md  README_vi-VN.md  README_zh-CN.md
src/: AI_engine.py  Magisk.py  TkinterDnD.py  __init__.py  add_language.py  blockimgdiff.py  build.py  contextpatch.py  controls.py  dumper.py  editor.py  extra.py  gpt.py  image2chunks.py  imp.py  install.sh  kdz.py  lpunpack.py  mkc_filedialog.py  mkkdz.py  ozipdecrypt.py  qtui.py  rangelib.py  sparse_img.py  sv_ttk_fixes.py  tkinterdnd2_build_in.py  tool.py  tool_tester.py  unkdz.py  utils.py
src/c_module/: CMakeLists.txt  __init__.py  build.sh  libutils.pyi  readme.md  utils.c  utils.h
src/c_module/android-tools/: CMakeLists.txt
src/c_module/c/: t.py
src/c_module/include/: utils.h
src/c_module/libnt/: CMakeLists.txt  Makefile  fnmatch.c  libnt.c  mman.c  test.c
src/c_module/libnt/include/: fnmatch.h  grp.h  io.h  libnt.h  pwd.h  unistd.h
src/c_module/libnt/include/sys/: mman.h  stat.h
src/core/: Magisk.py  __init__.py  addon_register.py  allwinnerimage.py  aml_extractor.py  aml_image.py  avb_disabler.py  blockimgdiff.py  config_parser.py  contextpatch.py  cpio.py  dumper.py  encryption_disabler.py  ext4.py  extra.py  fspatch.py  http_file.py  images.py  img2payload.py  imgextractor.py  imp.py  kdz.py  kitoboot.py  lpunpack.py  merge_sparse.py  miside_banner.py  mkc_filedialog.py  mpk_format.py  nb0_extractor.py  ntpi_unpacker.py  ofp_mtk_decrypt.py  ofp_qc_decrypt.py  opscrypto.py  opsplash.py  ozipdecrypt.py  payload_extract.py  posix.py  pycase.py  qsb_imger.py  rangelib.py  (+14 more)
src/core/ntpiutils/: __init__.py  crypto.py  extractor.py  parser.py  structures.py
src/core/pygpt/: .gitignore  README.md  gpt_file.py  gpt_reader.py  partition_table_entry.py  partition_table_header.py  partition_types.py
src/core/splash_editor/: main.py
src/core/splash_editor/src/: logo_gen.py  logo_gen_decoder.py
src/core/verify_payload/: __init__.py  checker.py  common.py  error.py  histogram.py  payload.py  payload_verifier.py
src/porttool/: Magisk.py  __init__.py  __main__.py  bootimg.py  configs.py  pathlib.py  ui.py  utils.py
src/qtui/: AI_engine.py  __init__.py  about.py  config.json  home.py  main.py  project.py  tool.py
src/qtui/config/: config.json
src/qtui/main/: home.py  main.py  plugin.py  settings.py
src/tkui/: AI_engine.py  TkinterDnD.py  __init__.py  controls.py  editor.py  splitsuper.py  sv_ttk_fixes.py  tkinterdnd2_build_in.py  tool.py
src/webui/: tool.py
